Fix sonar lint issues